--- a/owl.theme.default.css
+++ b/owl.theme.default.css
@@ -31,19 +31,25 @@
   margin-top: 10px; } */
 
 .owl-theme .owl-dots {
-  text-align: center;
+  text-align: right;
   position: absolute;
-  bottom: 0;
+  left: 0;
   right: 0;
+  bottom: 0;
+  margin: 0 auto;
+  max-width: 1920px;
+  width: 100%;
+  line-height: 0;
+  padding: 0 60px 60px 60px;
   -webkit-tap-highlight-color: transparent; }
   .owl-theme .owl-dots .owl-dot {
     display: inline-block;
     zoom: 1;
     *display: inline; }
     .owl-theme .owl-dots .owl-dot span {
-      width: 20px;
+      width: 30px;
       height: 2px;
-      margin: 5px 7px;
+      margin: 0 30px 0 0;
       background: #D6D6D6;
       display: block;
       -webkit-backface-visibility: visible;
