--- a/owl.theme.default.css
+++ b/owl.theme.default.css
@@ -50,10 +50,13 @@
       width: 30px;
       height: 2px;
       margin: 0 30px 0 0;
-      background: #D6D6D6;
+      background: #959595;
+      opacity: 0.6;
       display: block;
       -webkit-backface-visibility: visible;
       transition: opacity 200ms ease;
     }
     .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-      background: #869791; }
+      background: #969696; 
+      opacity: 1;
+    }
