--- a/main.css
+++ b/main.css
@@ -275,6 +275,7 @@ header .nav .nav_menu_btn{
 
 .container.interview .interview_items .row .col img{
   margin-bottom: 30px;
+  width:100%;
 }
 
 .container.interview .interview_items .row .col .item .view{
@@ -327,12 +328,122 @@ footer{
   flex-direction: column;
 }
 
-footer .title_footer{
-  border-top: black 0.5px solid;
+footer .container{
+  display: flex;
+  flex-direction: row;
+}
+
+footer .container .left{
+  height: 600px;
+  width: 66%;
+  margin-right:30px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+footer .container .right{
+  height: 600px;
+  width:33%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+footer .container .left .title_footer{
+  font-family: 'Quicksand-Regular';
+  padding: 0 0 30px 0;
+  font-size: 20px;
+  line-height: 24px;
+  border-bottom: black 0.5px solid;
+  width:100%;
+}
+
+footer .container .left .sitemap{
+  padding: 60px 0 0 0;
+  display: flex;
+  flex-direction: row;
+}
+
+footer .container .left .sitemap .col{
+  width: 25%;
   font-family: 'Quicksand-Regular';
   font-size: 20px;
   line-height: 24px;
-  width:100%;
-  padding: 26px 0 30px 0;
+  display: flex;
+  flex-direction: column;
+}
+footer .container .left .sitemap .col .row{
+  padding-bottom: 30px;
+  line-height: 24px;
 }
 
+footer .container .right .title_footer{
+  font-family: 'NotoSerifKR-Bold';
+  padding: 0 0 30px 0;
+  font-size: 20px;
+  line-height: 24px;
+  border-bottom: black 0.5px solid;
+  width:100%;
+}
+footer .container .right .helpers{
+  padding: 60px 0 0 0;
+  display: flex;
+  flex-direction: row;
+}
+
+footer .container .right .helpers .col{
+  width: 33%;
+  font-family: 'Quicksand-Regular';
+  font-size: 20px;
+  line-height: 35px;
+  display: flex;
+  flex-direction: column;
+}
+
+footer .container .right .helpers .col:first-child{
+  width:52%;
+}
+footer .container .right .helpers .col:nth-child(2){
+  width:26%;
+}
+footer .container .right .helpers .col:nth-child(3){
+  width: 22%;
+}
+
+footer .container .right .sponsor_from{
+  font-family: 'NotoSerifKR-Regular';
+  font-size: 20px;
+  line-height: 24px;
+  border-top: black 0.5px solid;
+  padding-top: 30px;
+  margin-top:155px;
+} 
+
+footer .container .left .copyright{
+  font-family: 'Quicksand-Regular';
+  color: #969696;
+  font-size: 20px;
+  line-height: 24px;
+  display: flex;
+  /* justify-content: space-between; */
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+footer .container .left .copyright .l{
+  width:63%;
+}
+
+footer .container .left .copyright .r{
+  width:27%;
+}
+
+footer .container .right .sponsor_icons{
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
