--- a/main.css
+++ b/main.css
@@ -271,6 +271,9 @@ header .nav .nav_menu_btn{
 .container.interview .interview_items .row .col:nth-child(3){
   margin-top: 120px;
 }
+.container.interview .interview_items .row .col:nth-child(3){
+  margin-top: 180px;
+}
 
 .container.interview .interview_items .row .col:last-child{
   margin: 180px 0 0 0;
