--- a/main.css
+++ b/main.css
@@ -211,7 +211,7 @@ header .nav .nav_menu_btn{
   transition: 0.75s;
 }
 
-.container.about .more_about .desc .bold{
+.container.about .more_about .members .bold{
   font-family: 'NotoSerifKR-Bold';
 }
 
