--- a/main.css
+++ b/main.css
@@ -358,37 +358,37 @@ header .nav .nav_menu_btn{
 }
 
 .container.interview .interview_items .row .col .item.item1{
-  background: url('./assets/images/card1.jpg');
+  background: url('./assets/images/card1.jpeg');
   background-size: cover;
 }
 
 .container.interview .interview_items .row .col .item.item2{
-  background: url('assets/images/card2.jpg');
+  background: url('assets/images/card2.jpeg');
   background-size: cover;
 }
 
 .container.interview .interview_items .row .col .item.item3{
-  background: url('assets/images/card3.jpg');
+  background: url('assets/images/card3.jpeg');
   background-size: cover;
 }
 
 .container.interview .interview_items .row .col .item.item4{
-  background: url('assets/images/card4.jpg');
+  background: url('assets/images/card4.jpeg');
   background-size: cover;
 }
 
 .container.interview .interview_items .row .col .item.item5{
-  background: url('assets/images/card5.jpg');
+  background: url('assets/images/card5.jpeg');
   background-size: cover;
 }
 
 .container.interview .interview_items .row .col .item.item6{
-  background: url('assets/images/card6.jpg');
+  background: url('assets/images/card6.jpeg');
   background-size: cover;
 }
 
 .container.interview .interview_items .row .col .item.item7{
-  background: url('assets/images/card7.jpg');
+  background: url('assets/images/card7.jpeg');
   background-size: cover;
 }
 
