--- a/page.css
+++ b/page.css
@@ -217,8 +217,8 @@ header .nav .nav_menu_btn img{
 
 .container.content2{
   max-width: 1300px;
-  height:4552px;
-  padding: 100px 0 80px 0;
+  height:3672px;
+  padding: 100px 0 0 0;
   width: 100%;
   /* display: flex; */
   flex-direction: column;
@@ -240,4 +240,180 @@ header .nav .nav_menu_btn img{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.container.content3{
+  max-width: 1300px;
+  height:880px;
+  padding: 0 0 80px 0;
+  width: 100%;
+  /* display: flex; */
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+  z-index: 10;
+  position: relative;
+}
+
+.container.content3 .footer_interview{
+  font-size: 20px;
+  line-height: 24px;
+  position: absolute;
+  width: 580px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  padding: 0 60px;
+  bottom: 120px;
+  color: black;
+}
+
+.container.content3 .footer_interview .more_btn{
+  font-family: 'NotoSerifKR-Bold';
+  line-height: 60px;
+  width: 580px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  cursor: pointer;
+  border-bottom: black 0.5px solid;
+}
+
+footer{
+  width:100%;
+  background-color: white;
+}
+
+.footer{
+  position:relative;
+  height: 720px;
+  width: 100%;
+  max-width: 1920px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  background:white;
+}
+
+.footer .container{
+  display: flex;
+  flex-direction: row;
+}
+
+.footer .container .left{
+  height: 600px;
+  width: 66%;
+  margin-right:30px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.footer .container .right{
+  height: 600px;
+  width:33%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.footer .container .left .title_footer{
+  font-family: 'Quicksand-Regular';
+  padding: 0 0 30px 0;
+  font-size: 20px;
+  line-height: 24px;
+  border-bottom: black 0.5px solid;
+  width:100%;
+}
+
+.footer .container .left .sitemap{
+  padding: 60px 0 0 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.footer .container .left .sitemap .col{
+  width: 25%;
+  font-family: 'Quicksand-Regular';
+  font-size: 20px;
+  line-height: 24px;
+  display: flex;
+  flex-direction: column;
+}
+.footer .container .left .sitemap .col .row{
+  padding-bottom: 30px;
+  line-height: 24px;
+}
+
+.footer .container .right .title_footer{
+  font-family: 'NotoSerifKR-Bold';
+  padding: 0 0 30px 0;
+  font-size: 20px;
+  line-height: 24px;
+  border-bottom: black 0.5px solid;
+  width:100%;
+}
+.footer .container .right .helpers{
+  padding: 60px 0 0 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.footer .container .right .helpers .col{
+  width: 33%;
+  font-family: 'Quicksand-Regular';
+  font-size: 20px;
+  line-height: 35px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer .container .right .helpers .col:first-child{
+  width:52%;
+}
+.footer .container .right .helpers .col:nth-child(2){
+  width:26%;
+}
+.footer .container .right .helpers .col:nth-child(3){
+  width: 22%;
+}
+
+.footer .container .right .sponsor_from{
+  font-family: 'NotoSerifKR-Regular';
+  font-size: 20px;
+  line-height: 24px;
+  border-top: black 0.5px solid;
+  padding-top: 30px;
+  margin-top:155px;
+} 
+
+.footer .container .left .copyright{
+  font-family: 'Quicksand-Regular';
+  color: #969696;
+  font-size: 20px;
+  line-height: 24px;
+  display: flex;
+  /* justify-content: space-between; */
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.footer .container .left .copyright .l{
+  width:63%;
+}
+
+.footer .container .left .copyright .r{
+  width:27%;
+}
+
+.footer .container .right .sponsor_icons{
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
