--- a/page.css
+++ b/page.css
@@ -287,7 +287,7 @@ header .nav .nav_menu_btn img{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin: 100px 0 80px;
+  margin: 100px 0 0;
 }
 
 .container .footer_interview{
