--- a/main.css
+++ b/main.css
@@ -658,8 +658,8 @@ footer{
 .footer .container .left .copyright{
   font-family: 'Quicksand-Regular';
   color: #969696;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 18px;
+  line-height: 21.6px;
   display: flex;
   /* justify-content: space-between; */
   position: absolute;
@@ -668,11 +668,18 @@ footer{
 }
 
 .footer .container .left .copyright .l{
-  width:63%;
+  width:51%;
 }
 
 .footer .container .left .copyright .r{
-  width:27%;
+  width:38%;
+}
+
+.footer .container .left .copyright .instagram{
+  width:11%;
+}
+.footer .container .left .copyright .instagram img{
+  width:40px;
 }
 
 .footer .container .right .sponsor_icons{
