--- a/page.css
+++ b/page.css
@@ -341,6 +341,7 @@ footer{
   display: flex;
   flex-direction: row;
   max-width: none;
+  padding-top: 0;
 }
 
 .footer .container .left{
@@ -403,9 +404,23 @@ footer{
   flex-direction: row;
 }
 
+.footer .container .right .helpers{
+  padding: 60px 0 0 0;
+  display: flex;
+  flex-direction: row;
+}
+
 .footer .container .right .helpers .col{
   width: 33%;
   font-family: 'Quicksand-Regular';
+  font-size: 20px;
+  line-height: 35px;
+  display: flex;
+  flex-direction: column;
+}
+.footer .container .right .helpers .col.names{
+  width: 33%;
+  font-family: 'NotoSerifKR-Regular';
   font-size: 20px;
   line-height: 35px;
   display: flex;
@@ -434,8 +449,8 @@ footer{
 .footer .container .left .copyright{
   font-family: 'Quicksand-Regular';
   color: #969696;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 18px;
+  line-height: 21.6px;
   display: flex;
   /* justify-content: space-between; */
   position: absolute;
@@ -444,17 +459,33 @@ footer{
 }
 
 .footer .container .left .copyright .l{
-  width:63%;
+  width:51%;
 }
 
 .footer .container .left .copyright .r{
-  width:27%;
+  width:38%;
+}
+
+.footer .container .left .copyright .instagram{
+  width:11%;
+}
+.footer .container .left .copyright .instagram img{
+  width:40px;
 }
 
 .footer .container .right .sponsor_icons{
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   position: absolute;
   bottom: 0;
   width: 100%;
+}
+
+.footer .container .right .sponsor_icons img.woman{
+  width: 213px;
+  margin-right: 90px;
+}
+
+.footer .container .right .sponsor_icons img.butterknife{
+  width: 134px;
 }
