--- a/page.css
+++ b/page.css
@@ -84,6 +84,7 @@ header .nav .nav_menu_btn img{
   background-position: center;
   background-size: cover;
   padding:0;
+  justify-content: flex-start;
 }
 
 .container.title.page2{
@@ -91,9 +92,20 @@ header .nav .nav_menu_btn img{
   height: 1400px;
 }
 
+.container.title.page3{
+  background: #82ffb4;
+  height: 1440px;
+}
+
+
 .container.title .page_title{
   margin-top: 150px;
   width:500px;
+}
+
+.container.title .page_title p3{
+  margin-top: 150px;
+  width:470px;
 }
 
 .container.title .page_img{
@@ -105,6 +117,7 @@ header .nav .nav_menu_btn img{
   font-size: 28px;
   padding-top: 100px;
   line-height: 38px;
+  text-align: center;
 }
 
 .container{
@@ -120,7 +133,7 @@ header .nav .nav_menu_btn img{
 }
 
 .container + .container{
-  padding: 80px 0 0 0;
+  padding: 100px 0 0 0;
 }
 
 .container.content1{
@@ -156,6 +169,33 @@ header .nav .nav_menu_btn img{
   line-height: 38px;
 }
 
+.container .table .left.odd{
+  display: inline-block;
+  width: 384px;
+  border:0;
+  border-top: 1px solid black;
+  margin-right: 30px;
+}
+
+.container .table .right.odd{
+  display: inline-block;
+  border:0;
+  width: 886px;
+  border-top: 1px solid black;
+  font-size: 22px;
+  line-height: 38px;
+}
+
+.container .table .left.full{
+  display: inline-block;
+  border:0;
+  width: 1300px;
+  border-top: 1px solid black;
+  font-size: 22px;
+  line-height: 38px;
+  border:0 
+}
+
 .container .table .left.noborder,
 .container .table .right.noborder
 {
@@ -183,6 +223,7 @@ header .nav .nav_menu_btn img{
   transition: 0.75s;
 }
 
+
 .container .table .left .interview_a,
 .container .table .right .interview_a{
   font-size: 22px;
@@ -198,6 +239,44 @@ header .nav .nav_menu_btn img{
 {
   color:#fafa64;
   text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
+}
+
+.container .table .left .interview_title.p3,
+.container .table .right .interview_title.p3,
+.container .table .left .interview_q.p3,
+.container .table .right .interview_q.p3{
+  color:#82ffb4;
+  text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
+}
+
+.container .table.heart{
+  position: relative;
+}
+.container .table.heart img{
+  position: absolute;
+  top:0;
+  left:50%; 
+  transform:translateX(-50%);
+  width:635px;
+  z-index: 12;
+  opacity:0.5;
+}
+
+.container .table .left .interview_a.p3 .heart_left {
+  /* shape-outside: polygon(0 0, 0 100%, 100% 100%, 100% 95%, 20% 40%, 10% 20%, 20% 0); */
+  shape-outside: polygon(100% 8%, 100% 99%, 18% 56%, 1% 43%, 0% 41%, -3% 25%, 32% 0);
+  float: right;
+  /* background-color: violet; */
+  width:330px;
+  height: 500px;
+}
+
+.container .table .right .interview_a.p3 .heart_right {
+  shape-outside: polygon(0 0, 0% 100%, 0 100%, 6% 97%, 93% 51%, 110% 21%, 80% 0);
+  float: left;
+  /* background-color: violet; */
+  width:330px;
+  height: 500px;
 }
 
 .container .table .left img,
@@ -216,7 +295,8 @@ header .nav .nav_menu_btn img{
   width: 100%;
 }
 
-.container .left .nav{
+.container .left .nav,
+.container .right .nav{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -224,16 +304,19 @@ header .nav .nav_menu_btn img{
   border-bottom: 1px solid black;
 }
 
-.container .left .nav.anchor_nav{
+.container .left .nav.anchor_nav,
+.container .right .nav.anchor_nav{
   cursor: pointer;
 }
 
-.container .left .nav .num{
+.container .left .nav .num,
+.container .right .nav .num{
   font-family: "Quicksand-Bold";
   font-size: 20px;
   line-height: 42px;
 }
-.container .left .nav .title{
+.container .left .nav .title,
+.container .right .nav .title{
   font-family: 'NotoSerifKR-Bold';
   font-size: 20px;
   line-height: 42px;
@@ -285,6 +368,22 @@ header .nav .nav_menu_btn img{
   /* The image used */
   /* margin: 100px 0 80px; */
   background-image: url("./assets/images/page2_img1.png");
+
+  /* Set a specific height */
+  min-height: 800px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 100px 0 0;
+}
+
+.parallax4 {
+  /* The image used */
+  /* margin: 100px 0 80px; */
+  background-image: url("./assets/images/page3_img4.png");
 
   /* Set a specific height */
   min-height: 800px;
