--- a/main.css
+++ b/main.css
@@ -165,6 +165,7 @@ header .nav .nav_menu_btn{
   position:relative;
   height: 100vh;
   max-width: 1920px;
+  min-height: 1080px;
   width: 100%;
   left: 0;
   right: 0;
@@ -280,6 +281,7 @@ header .nav .nav_menu_btn{
   position:relative;
   height: 2155px;
   max-width: 1920px;
+  min-width: 1280px;
   width: 100%;
   left: 0;
   right: 0;
@@ -545,6 +547,7 @@ footer{
   height: 720px;
   width: 100%;
   max-width: 1920px;
+  min-width: 1280px;
   left: 0;
   right: 0;
   margin: 0 auto;
