--- a/main.css
+++ b/main.css
@@ -165,6 +165,7 @@ header .nav .nav_menu_btn{
   position:relative;
   height: 100vh;
   max-width: 1920px;
+  min-width: 1280px;
   min-height: 1080px;
   width: 100%;
   left: 0;
