--- a/main.css
+++ b/main.css
@@ -711,6 +711,11 @@ footer{
 }
 
 @media screen and (max-width: 1280px) {
+
+  .container.about{
+    height:75vh;
+
+  }
   .footer .container .right .sponsor_icons img.woman{
     display: none;
   }
